Fix bug shopping cart and payement page

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -25,7 +25,7 @@
         <div class="navbar-absolute-top-scroller">
           <ul class="navbar-nav nav-pills">
             <!-- Shopping cart -->
-            <li class="nav-item">
+            <li class="nav-item position-relative">
               <a class="btn btn-primary" routerLink="shopping-cart">Panier <span id="articleCard" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-secondary"></span></a>
             </li>
              <!-- Log in -->
