Display order detail

--- a/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/components/shopping-cart/shopping-cart.component.html
@@ -121,7 +121,7 @@
                       <div *ngIf="!user?.deliveryStreet">
                         <p *ngIf="user?.invoiceAddressComplement">{{ user?.invoiceAddressComplement }}</p>
                         <p>{{ user?.invoiceStreet }}</p>
-                        <p>{{ user?.invoiceZipCode }} {{ user?.invoiceCity }}</p>s
+                        <p>{{ user?.invoiceZipCode }} {{ user?.invoiceCity }}</p>
                       </div>
                     </div>
                     <div class="modal-footer">
